// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Prueba componente <GifGrid /> Debe de mostrar componente 1`] = `
<Fragment>
  <h3
    className="animate__animated animate__fadeIn "
  >
    Detective Conan
  </h3>
  <div
    className="card-grid"
  />
</Fragment>
`;

exports[`Prueba componente <GifGrid /> Debe de mostrar items cuando se cargan imagenes useFetchGifs 1`] = `
<Fragment>
  <h3
    className="animate__animated animate__fadeIn "
  >
    Detective Conan
  </h3>
  <div
    className="card-grid"
  >
    <GifGridItem
      id="ABC"
      key="ABC"
      title="cualquier cosa"
      url="https://localhost/cualquier/cosa.jpg"
    />
    <GifGridItem
      id="123"
      key="123"
      title="cualquier cosa"
      url="https://localhost/cualquier/cosa.jpg"
    />
  </div>
</Fragment>
`;
